[workspace]
members = [
    "crates/rustfs-kafka",
    "crates/rustfs-kafka-async",
]
resolver = "3"

[workspace.package]
version = "1.2.0"
authors = ["heihutu <heihutu@gmail.com>", "houseme <husemecn@gmail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/rustfs-kafka/"
edition = "2024"
keywords = ["kafka", "queue"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/houseme/kafka-rust"
description = "Rust client for Apache Kafka"
rust-version = "1.93.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
needless_collect = "warn"
redundant_clone = "warn"

[workspace.dependencies]
rustfs-kafka = { path = "crates/rustfs-kafka", version = "1.2.0" }
rustfs-kafka-async = { path = "crates/rustfs-kafka-async", version = "1.2.0" }
# Core dependencies
socket2 = "0.6.3"
fnv = "1.0.7"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash32", "std"] }
bytes = "1.11.1"
kafka-protocol = { version = "0.17.0", features = ["client"] }
indexmap = "2.14.0"
thiserror = "2.0.18"
tracing = "0.1.44"

# Optional dependencies (made optional in consuming crates via dep: syntax)
rustls = { version = "0.23.40", default-features = false, features = ["logging", "std", "tls12"] }
webpki-roots = "1.0.7"
rustls-native-certs = "0.8.3"

# Optional: metrics
metrics = "0.24.6"
base64 = "0.22.1"
hmac = "0.13.0"
sha2 = "0.11.0"
pbkdf2 = "0.13.0"

# Async runtime
tokio = "1.52.3"
tokio-rustls = "0.26.4"

# Dev dependencies
ctor = "1.0.6"
getopts = "0.2.24"
tracing-subscriber = "0.3"
rand = "0.10.1"
anyhow = "1.0.102"
proptest = "1.11.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
temp-env = "0.3.6"
